--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
       </p>
       <button>Register</button>
       <ul>
-        <li><svg  xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 32 32">
+        <li>
+          <svg  xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 32 32">
           <path fill="#fff" d="M 19.253906 2 C 15.311906 2 13 4.0821719 13 8.8261719 L 13 13 L 8 13 L 8 18 L 13 18 L 13 30 L 18 30 L 18 18 L 22 18 L 23 13 L 18 13 L 18 9.671875 C 18 7.884875 18.582766 7 20.259766 7 L 23 7 L 23 2.2050781 C 22.526 2.1410781 21.144906 2 19.253906 2 z"></path>
-          </svg></li>
+          </svg>
+        </li>
         <li><ion-icon name="logo-twitter"></ion-icon></li>
         <li><ion-icon name="logo-instagram"></ion-icon></li>
       </ul>
